# cmdproxy.py

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: python-package.yml
examples/: Dockerfile.client  client.py
scripts/: version.sh
src/cmdproxy/: __init__.py  __main__.py  client.py  command_tool.py  errors.py  invoke_middle.py  invoke_params.py  logging.py  main.py  middles.py  protocol.py  run_request.py  server.py  singleton.py
src/cmdproxy/celery_app/: app.py  config.py  tasks.py
src/cmdproxy/utils/: fs.py
tests/: command-palette.yaml  conftest.py  fake_run_context.py  test_client_server.py  test_config.py  test_invoke_middle.py  test_invoke_param.py  test_protocol.py  test_run_request.py  test_singleton.py
tests/resources/fake_folder/: fake_file
tests/resources/fake_folder/fake_nested_folder/: fake_file
